--- a/src/component/about/about.css
+++ b/src/component/about/about.css
@@ -1,7 +1,7 @@
 .about__container {
     display: grid;
-    grid-template-columns: 35% 50%;
-    gap: 15%;
+    grid-template-columns: 35% 55%;
+    gap: 10%;
 }
 
 .about__me{
@@ -75,27 +75,27 @@
         margin: 2rem auto 4rem;
     }
 
-    .about_content p {
+    .about__content p {
         margin: 1rem 0 1.5rem;
     }
 }
 
 /* ============== MEDIA SMALL DEVICES ============== */
 @media screen and (max-width: 600px){
-    .about_me {
+    .about__me {
         width: 65%;
         margin: 0 auto 3rem;
     }
 
     .about__cards{
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         gap: 1rem;
     }
 
     .about__content{
         text-align: center;
     }
-    .about__content p{
+    .about__content p  {
         margin: 1.5rem 0;
     }
 }
