--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
     --transition: all 400ms ease;
 
     --container-width-lg: 75%;
-    --container-with-md: 86%;
+    --container-width-md: 86%;
     --container-width-sm: 90%;
 
 }
@@ -60,16 +60,17 @@ h1 {
 
 section {
     margin-top: 8rem;
-    height: 100vh;
 }
 
-section > h2, section > h5 {
+section > h2, 
+section > h5 {
     text-align: center;
     color: var(--color-light);
 }
 
 section > h2 {
     color: var(--color-primary);
+    margin-bottom:  3rem;
 }
 
 .text-light {
@@ -114,7 +115,8 @@ img{
 /* ============== MEDIA MEDIUM DEVICES ============== */
 @media screen and (max-width: 1024px){
     .container{
-        width: var(--container-with-md);
+        width: var(--container-width-md);
+        height: fit-content;
     }
     section {
         margin-top: 6rem;
@@ -124,7 +126,8 @@ img{
 /* ============== MEDIA SMALL DEVICES ============== */
 @media screen and (max-width: 600px){
     .container{
-        width: var(--container-with-sm);
+        width: var(--container-width-sm);
+        margin: 0 auto;
     }
     section > h2{
         margin-top: 2rem;
